-fixed a bug in FiguR. Software failed to load any column containing an NA value
-fixed theme not showing in FiguR
-added a button to reset theme
-fixed preview not showing when performing check size on a panel
-fixed a non reproducible/system dependent freezing bug when applying checks to an image
-Many thanks to SF users for reporting those bugs and providing me with test samples

03/11/14
-fixed minor bugs (e.g. erroneous positioning of the insets when using the "ROI --> inset" function)
-removed unnecessary variables in the main SF class
-removed automatic adding of letters when "auto" panel is used
-now resets panel numbering when "new" is pressed

27/10/14
-quick & dirty fix for a layout bug that occured when images were swapped in a panel within a row (columns were sometimes moving)

23/10/14
-fixed a bug that (rarely) prevented images from being deleted

14/10/14
-Minor changes and bug fixes in FiguR
-Fixed a minor bug in the R math editor

09/10/14
-fixed bug related to addition of images to a panel
-fixed deletion of figures (cannot be retroactive unfortunately) that would lose the figur file even if it still exists
-fixed bug in check fonts (font was not loaded properly)

01/10/14
-improved support of one liners (panels that have just one column or one row), it allows to have assymetries in x or y, this strongly increases the ease of use of ScientiFig

01/09/14
-fixed repaint error in send to back and send to front
-added a list to browse ROIs associated to an image
-better handling of options specific of particular shapes (irrelevant options are inactivated when the wrong ROI type is selected)

28/08/14
-updated ROIs (vectorial objects, squares, circles, ...) the objects can now be filled and set to transparent, the new shapes should remain compatible with old ones

21/08/14
-fixed a minor row selection error
-fixed text misalignment in left/right text bars when they contain line breaks

20/08/14